Atualizada documentação swagger
