# api/routes/veiculoRouter.ts
@@ -5,21 +5,18 @@ import { Veiculo } from "@prisma/client";
 const veiculoRouter = Router();
 const prisma = new PrismaClient();
 
-
-// GET /veiculo
-// Retorna todos os veículos
 veiculoRouter.get("/", async (req, res) => {
+    // #swagger.tags = ['Veículos']
     const veiculos: Veiculo[] = await prisma.veiculo.findMany({
         include: {
             setor: true,
-        },
+        }
     });
     return res.json(veiculos);
 });
 
-// GET /veiculo/:id
-// Retorna um veículo específico
 veiculoRouter.get("/:id", async (req, res) => {
+    // #swagger.tags = ['Veículos']
     const { id } = req.params;
     const veiculo: Veiculo | null = await prisma.veiculo.findUnique({
         include: {
@@ -35,9 +32,31 @@ veiculoRouter.get("/:id", async (req, res) => {
     return res.json(veiculo);
 });
 
-// POST /veiculo
-// Cria um novo veículo
 veiculoRouter.post("/", async (req, res) => {
+    /* 
+    #swagger.tags = ['Veículos']
+    #swagger.parameters['Veiculo'] = {
+        in: 'body',                                             
+        required: true,                     
+        schema: { 
+            $placa: 'Placa do veículo',
+            $marca: 'Marca do veículo',
+            $modelo: 'Modelo do veículo',
+            $tipo: 'Tipo do veículo',
+            $status: 'Status do veículo',
+            $chassi: 'Chassi do veículo',
+            $renavam: 'Renavam do veículo',
+            $km: 0,
+            $ano: 0,
+            $cor: 'Cor do veículo',
+            $combustivel: 'Combustível do veículo',
+            $categoriaCNH: 'Categoria de CNH para dirigir o veículo',
+            $dataLicenciamento: 'Data do ultimo licenciamento do veículo',
+            $numPatrimonio: 0,
+            $setorId: 0
+        }                        
+    } 
+    */
     const veiculo: Veiculo = req.body;
     const novoVeiculo: Veiculo = await prisma.veiculo.create({
         data: veiculo,
@@ -45,11 +64,38 @@ veiculoRouter.post("/", async (req, res) => {
     return res.status(201).json(novoVeiculo);
 });
 
-// PUT /veiculo/:id
-// Atualiza um veículo
 veiculoRouter.put("/:id", async (req, res) => {
+    /* 
+    #swagger.tags = ['Veículos']
+    #swagger.parameters['Veiculo'] = {
+        in: 'body',                                             
+        required: true,                     
+        schema: { 
+            $placa: 'Placa do veículo',
+            $marca: 'Marca do veículo',
+            $modelo: 'Modelo do veículo',
+            $tipo: 'Tipo do veículo',
+            $status: 'Status do veículo',
+            $chassi: 'Chassi do veículo',
+            $renavam: 'Renavam do veículo',
+            $km: 0,
+            $ano: 0,
+            $cor: 'Cor do veículo',
+            $combustivel: 'Combustível do veículo',
+            $categoriaCNH: 'Categoria de CNH para dirigir o veículo',
+            $dataLicenciamento: 'Data do ultimo licenciamento do veículo',
+            $numPatrimonio: 0,
+            $setorId: 0
+        }                        
+    } 
+    */
     const { id } = req.params;
-    if(!await prisma.veiculo.findUnique({ where: { id: Number(id) } })) {
+    const veiculoExiste: Veiculo | null = await prisma.veiculo.findUnique({
+        where: {
+            id: Number(id),
+        },
+    });
+    if (!veiculoExiste) {
         return res.status(404).json({ error: "Veículo não encontrado" });
     }
     const veiculo: Veiculo = req.body;
@@ -65,9 +111,8 @@ veiculoRouter.put("/:id", async (req, res) => {
     return res.json(veiculoAtualizado);
 });
 
-// DELETE /veiculo/:id
-// Deleta um veículo
 veiculoRouter.delete("/:id", async (req, res) => {
+    // #swagger.tags = ['Veículos']
     const { id } = req.params;
     const veiculoDeletado: Veiculo | null = await prisma.veiculo.delete({
         include: {
